force-app/main/default/objects/Listas_de_seleccion__c/Listas_de_seleccion__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Listas de selección</label>
</CustomObject>