force-app/main/default/objects/Listas_de_seleccion__c/fields/Identificador__c.field-meta.xml
<CustomField>
    <fullName>Identificador__c</fullName>
    <label>Identificador</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>