force-app/main/default/objects/Listas_de_seleccion__c/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <label>Idioma</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>