force-app/main/default/objects/Listas_de_seleccion__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>