force-app/main/default/objects/Listas_de_seleccion__c/listViews/Listas_de_seleccion.listView-meta.xml
<ListView>
    <fullName>Listas_de_seleccion</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>Identificador__c</columns>
    <columns>Idioma__c</columns>
    <columns>Valor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Listas de selección</label>
    <language>es</language>
</ListView>